Reverted 13966. Yet another "git merge into the wrong SVN branch" bug
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/branches/ProActive_DataSpaces@13967 28e8926c-6b08-0410-baaa-805c5e19b8d6