@@ -39,7 +39,6 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.log4j.Logger;
-import org.objectweb.proactive.core.config.PAProperties;
 import org.objectweb.proactive.core.util.OperatingSystem;
 import org.objectweb.proactive.core.util.log.Loggers;
 import org.objectweb.proactive.core.util.log.ProActiveLogger;
@@ -65,6 +64,7 @@ public class Executor {
         Logger logger = ProActiveLogger.getLogger(Loggers.DEPLOYMENT + ".job." + jobId);
         jobId++;
 
+        command = command.replaceAll("'", "\"");
         logger.debug("Command submited: " + command);
         try {
             logger.info("executing command=" + command);
@@ -72,8 +72,7 @@ public class Executor {
             Process p = null;
             switch (OperatingSystem.getOperatingSystem()) {
                 case unix:
-                    p = Runtime.getRuntime().exec(
-                            new String[] { PAProperties.PA_GCMD_UNIX_SHELL.getValue(), "-c", command });
+                    p = Runtime.getRuntime().exec(new String[] { "sh", "-c", command });
                     break;
                 case windows:
                     p = Runtime.getRuntime().exec(command);
